# store-api

./: .env.example  .gitignore  .ruff-check.sh  .ruff-fix.sh  .ty-check.sh  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  database.py  db_depends.py  main.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 1b0bfbec9708_add_user_model.py  43df2c01938e_initial_migration_for_postgresql.py  5e6b27a5bea4_create_search_vector.py  6951db7539a4_create_categories_and_products_tables.py  6bdd3761e9c2_create_cart_3.py  75f3c0ceb7a9_add_reviews_2.py  859a4d9b35f1_add_reviews.py  984d85704a10_create_cart.py  a4c7bcf9a751_create_cart_2.py  f1d71a2a412c_add_orders_and_order_items.py  fd70356fbfbf_add_created_at_and_updated_at_to_.py
app/models/: __init__.py  cart_items.py  categories.py  orders.py  products.py  reviews.py  users.py
app/routers/: carts.py  categories.py  orders.py  products.py  reviews.py  users.py
app/schemas/: __init__.py  cart_items.py  categories.py  orders.py  products.py  reviews.py  users.py
