[project]
name = "fastapi-6-project"
version = "0.1.0"
description = "FastAPI Интернет-магазин"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
    "alembic>=1.17.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

