[project]
name = "fastapi-6-project"
version = "0.1.0"
description = "FastAPI Интернет-магазин"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.12.5",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.45",
    "alembic>=1.17.2",
    "asyncpg>=0.29.0",
    "passlib>=1.7.4",
    "bcrypt==4.0.1",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ty]
# Версия Python
python_version = "3.13"

# Директории для проверки
include = ["app"]

# Директории для исключения
exclude = [
    "**/__pycache__",
    "**/migrations",
    ".venv",
    "venv",
]

# Строгость проверки (false для начала, можно включить позже)
strict = false

# Предупреждения
warn_unused_imports = true
warn_unused_variables = true
warn_unused_definitions = true
warn_missing_return_type = true

[tool.ruff]
# Версия Python
target-version = "py313"
line-length = 100

# Директории для проверки
include = ["*.py"]

# Директории для исключения
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "**/migrations/**",
    "**/__pycache__",
    ".git",
    ".ruff_cache",
]

[tool.ruff.lint]
# Включаем все правила
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (сортировка импортов)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Игнорируем некоторые правила
ignore = [
    "E501",  # line too long (обрабатывается форматтером)
    "B008",  # do not perform function calls in argument defaults
    "F821",  # undefined name (для forward references в SQLAlchemy)
    "E712",  # comparison to True (SQLAlchemy требует явное сравнение)
    "E402",  # module level import not at top (намеренное размещение после комментариев)
    "B904",  # raise from (можно игнорировать для HTTPException)
]

# Разрешаем автоматическое исправление
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Используем стиль Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Настройки сортировки импортов
known-first-party = ["app"]
force-sort-within-sections = true
split-on-trailing-comma = true
